# bellbird-notes-rs

./: Cargo.toml  README.md
crates/bellbird-core/: Cargo.toml
crates/bellbird-core/src/: config.rs  directories.rs  lib.rs  notes.rs
crates/bellbird-ui/: Cargo.toml  build.rs
crates/bellbird-ui/data/: resources.gresource  resources.gresource.xml
crates/bellbird-ui/data/ui/: breadcrumb.ui  directory_tree_row.ui  list_view_row.ui  notes_list_row.ui
crates/bellbird-ui/src/: action_entries.rs  application.rs  contextmenu.rs  default_layout.rs  dialogue.rs  directory_tree.rs  editor_view.rs  main.rs  menu.rs  notes_list.rs  notes_list_model_item.rs
crates/bellbird-ui/src/breadcrumb/: imp.rs  mod.rs
crates/bellbird-ui/src/contextmenu/: directory_tree_context_menu.rs  notes_list_context_menu.rs
crates/bellbird-ui/src/directory_tree_row/: imp.rs  mod.rs
crates/bellbird-ui/src/list_view_row/: imp.rs  mod.rs
crates/bellbird-ui/src/notes_list_row/: imp.rs  mod.rs
