[package]
name = "bellbird-core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.86"
async-std = { version = "1.12.0", features = ["std"] }
configparser = { version = "3.1.0", features = ["indexmap", "async-std"] }
directories = "5.0.1"
indexmap = "2.4.0"
regex = "1.10.6"
walkdir = "2.5.0"

[features]
stable = []
snapshot = []

#jefault = ["stable"]
