[package]
name = "bellbird-notes"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bellbird-core = { path = "../bellbird-core" }
glib = "0.20.1"
relm4 = { version = "0.9.0", features = ["libadwaita"] }
relm4-components = "0.9.1"
