[package]
name = "bellbird-notes"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bellbird-core = { path = "../bellbird-core" }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_12"] }
sourceview5 = "0.9.0"

[features]
stable = []
snapshot = []

default = ["snapshot"]
