[package]
name = "bellbird-notes"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
bellbird-core = { path = "../bellbird-core" }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_12"] }
sourceview5 = "0.9.0"
anyhow = "1.0.86"
glib = "0.20.2"
once_cell = "1.19.0"
async-std = "1.12.0"

[build-dependencies]
anyhow = "1.0.86"
glib-build-tools = "0.20.0"

[features]
stable = ["bellbird-core/stable"]
snapshot = ["bellbird-core/snapshot"]

default = ["snapshot"]
